fix(tinymce): Do not exceed height of element window
and use the correct colors for the overflowing
toolbar.

--- a/app/stylesheets/tinymce/skins/ui/alchemy-dark/skin.scss
+++ b/app/stylesheets/tinymce/skins/ui/alchemy-dark/skin.scss
@@ -2445,7 +2445,7 @@ body.tox-dialog__disable-scroll {
 
 .tox-fullscreen {
   border: 0;
-  height: 100%;
+  height: 100% !important;
   margin: 0;
   overflow: hidden;
   -ms-scroll-chaining: none;
@@ -3630,7 +3630,7 @@ body.tox-dialog__disable-scroll {
 }
 
 .tox.tox-tinymce-aux .tox-toolbar__overflow {
-  background-color: #fff;
+  background-color: var(--a-darker-grey);
   border: var(--border-default);
   border-radius: var(--border-radius_medium);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
